Bump quarkus.version from 3.13.3 to 3.15.1 (#215)
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Alexander Stanik <alexander.stanik@htw-berlin.de>